--- a/Views/Reporting/BuyerGodReport.cshtml
+++ b/Views/Reporting/BuyerGodReport.cshtml
@@ -50,8 +50,13 @@
         </div>
     </div>
 <div id="TableArea">
-    <table id="DisplayTable">
-    </table>
+    <div id="swipe_text_wrap">
+        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe to view full table&nbsp;&#8594;</p>
+        <p class="swipe_text show-desktop">&#8592;&nbsp;click on the table and use keyboard arrow keys&nbsp;&#8594;</p>
+    </div>
+    <div id="table-scroll">
+        <table id="DisplayTable"></table>
+    </div>
 </div>
 
 
