--- a/Content/Site.css
+++ b/Content/Site.css
@@ -919,3 +919,15 @@ div#SelectionDiv {
     min-height: 500px!important;
     min-width: 800px!important;
 }
+
+.chart-legend li span{
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
+}
+
+.ChartDiv {
+    float: left;
+    margin-right: 25px;
+}
