--- a/Views/Overview/Index.cshtml
+++ b/Views/Overview/Index.cshtml
@@ -28,11 +28,11 @@
     <div id="PieCustomersNewVsExistingLegend" class="chart-legend"></div>
 </div>
 @* Controller - No Data *@
-@*<div class="ChartDiv">
-    <h4>Tirn Over Vs Margin Ex Vat</h4>
+<div class="ChartDiv">
+    <h4>Turn Over Vs Margin Ex Vat</h4>
     <canvas id="BarTurnoverVsMarginExVat7Days" width="400" height="250"></canvas>
     <div id="TurnoverVsMarginExVat7DaysLegend" class="chart-legend"></div>
-</div>*@
+</div>
 
 @*<div class="ChartDiv">
     <canvas id="BarTurnoverVsMarginExVat6Months" width="200" height="200"></canvas>
