Product and expiery update

--- a/Views/Reporting/ProductRulesReport.cshtml
+++ b/Views/Reporting/ProductRulesReport.cshtml
@@ -5,6 +5,7 @@
 <h2>Product Rules Report</h2>
 <br />
 <br />
+Day Range:
 <select id="DaysSelect">
     <option value="1">1</option>
     <option value="3">3</option>
@@ -16,7 +17,7 @@
 <button class="generateButton" id="GenerateButton" onclick="getInfo()">Generate Report</button>
 <br />
 <br />
-<div id="TableArea">
+<div id="TableArea"  class="HiddenDiv">
     <br />
     <br />
     <h3>Past Rules</h3>
