--- a/Content/Site.css
+++ b/Content/Site.css
@@ -767,6 +767,10 @@ div#SelectionDiv {
     font-size: 25px;
 }
 
+   #flexibuyreport_buttons_position {
+    width:100%
+   }
+
 
 @media (min-width: 520px) {
 
@@ -792,6 +796,7 @@ div#SelectionDiv {
     margin-left: 3%;
     margin-bottom: 30px;
 }
+
     div#DateDiv {
     margin: 0 auto;
     width: 80%;
@@ -800,8 +805,35 @@ div#SelectionDiv {
 }
 
 
-    /* ########### :END: DASHBOARD ########### */
+  /* ########### :END: DASHBOARD ########### */
+
+      /* ########### FLEXIBUY REPORT ########### */
+
+  #flexibuyreport_buttons_position {
+    margin: 0 auto;
+    margin-top: 20px;
+    /* display: block; */
+    width: 80%;
+    max-width: 600px;
+   }
+
+  .Datediv_flexibuyreport {
+    margin: 0 auto;
+    width: 50%;
+    max-width: 600px;
+   }
+
+     .generateButton_flexipay {
+    width: 47%;
+        margin-left: 1%;
+    }
+
+
+      /* ########### :END: FLEXIBUY REPORT ########### */
+
 }
+
+/* ########### :END: @media (min-width: 520px) ########### */
 
 
 @media (min-width: 760px) {
