--- a/Views/Reporting/FlexiPayReport.cshtml
+++ b/Views/Reporting/FlexiPayReport.cshtml
@@ -8,39 +8,39 @@
 <h1 class="centeredText">Flexi Buy Report</h1>
 <h4 class="centeredText">Please select a Year &amp; Month</h4>
 <div class="Datediv_flexibuyreport">
-    @Html.DropDownList("YearsAvailable")
-    <select name="MonthsAvailable" id="MonthsAvailable" onchange="" size="1">
-        <option value="00">...</option>
-        <option value="01">January</option>
-        <option value="02">February</option>
-        <option value="03">March</option>
-        <option value="04">April</option>
-        <option value="05">May</option>
-        <option value="06">June</option>
-        <option value="07">July</option>
-        <option value="08">August</option>
-        <option value="09">September</option>
-        <option value="10">October</option>
-        <option value="11">November</option>
-        <option value="12">December</option>
-        <option class="InvisibleDiv" value="1">January</option>
-        <option class="InvisibleDiv" value="2">February</option>
-        <option class="InvisibleDiv" value="3">March</option>
-        <option class="InvisibleDiv" value="4">April</option>
-        <option class="InvisibleDiv" value="5">May</option>
-        <option class="InvisibleDiv" value="6">June</option>
-        <option class="InvisibleDiv" value="7">July</option>
-        <option class="InvisibleDiv" value="8">August</option>
-    </select>
+        @Html.DropDownList("YearsAvailable")
+        <select name="MonthsAvailable" id="MonthsAvailable" onchange="" size="1">
+            <option value="00">...</option>
+            <option value="01">January</option>
+            <option value="02">February</option>
+            <option value="03">March</option>
+            <option value="04">April</option>
+            <option value="05">May</option>
+            <option value="06">June</option>
+            <option value="07">July</option>
+            <option value="08">August</option>
+            <option value="09">September</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
+            <option class="InvisibleDiv" value="1">January</option>
+            <option class="InvisibleDiv" value="2">February</option>
+            <option class="InvisibleDiv" value="3">March</option>
+            <option class="InvisibleDiv" value="4">April</option>
+            <option class="InvisibleDiv" value="5">May</option>
+            <option class="InvisibleDiv" value="6">June</option>
+            <option class="InvisibleDiv" value="7">July</option>
+            <option class="InvisibleDiv" value="8">August</option>
+        </select>
 </div>
 
 <div style="clear: both;"></div>
 
 <div id="flexibuyreport_buttons_position">
-    <button class="generateButton" id="GenerateButton" onclick="GenerateFlexiPayReportReport()">Generate Report</button>
+    <button class="generateButton generateButton_flexipay" id="GenerateButton" onclick="GenerateFlexiPayReportReport()">Generate Report</button>
     <a id="dlink" style="display:none;"></a>
     <div class="" id="ExportDiv">
-        <input class="generateButton" type="button" onclick="tableToExcel('DisplayTable', 'Flexi Buy Report', '.xls')" value="Export to Excel">
+        <input class="generateButton generateButton_flexipay" type="button" onclick="tableToExcel('DisplayTable', 'Flexi Buy Report', '.xls')" value="Export to Excel">
     </div>
     <div class="InvisibleDiv errorDiv" id="ErrorDiv">
         Please compleate required information
