--- a/Views/Overview/Index.cshtml
+++ b/Views/Overview/Index.cshtml
@@ -6,24 +6,24 @@
 
 
 <div class="ChartDiv">
-    <h4>Web Vs Phone Orders</h4>
+    <h4>Web vs Phone (Today)</h4>
     <canvas id="PieWebVsPhone" width="200" height="200"></canvas>
     <div id="PieWebVsPhoneLegend" class="chart-legend"></div>
 </div>
 <div class="ChartDiv">
-    <h4>Web Vs Phone Orders over the last 7 Days</h4>
+    <h4>Web vs Phone (7 Days)</h4>
     <canvas id="PieWebVsPhone7Days" width="200" height="200"></canvas>
     <div id="PieWebVsPhone7DaysLegend" class="chart-legend"></div>
 </div>
 
 <div class="ChartDiv">
-    <h4>Standard Customers Vs Freedom Members</h4>
+    <h4>Customer Types (Today) </h4>
     <canvas id="PieCustomerNormalVsFreedom" width="200" height="200"></canvas>
     <div id="PieCustomerNormalVsFreedomLegend" class="chart-legend"></div>
 </div>
 
 <div class="ChartDiv">
-    <h4>New customers Vs Existing Customers</h4>
+    <h4>Repeat Customers (Today)</h4>
     <canvas id="PieCustomersNewVsExisting" width="200" height="200"></canvas>
     <div id="PieCustomersNewVsExistingLegend" class="chart-legend"></div>
 </div>
