--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -29,14 +29,23 @@
             <img src="~/Content/Images/ajax-loader.gif" />
         </div>
     </div>
+
 <div id="TableArea">
+    <div id="swipe_text_wrap">
+        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe to view full table&nbsp;&#8594;</p>
+        <p class="swipe_text show-desktop">&#8592;&nbsp;click on the table and use keyboard arrow keys&nbsp;&#8594;</p>
+    </div>
+    <div id="table-scroll">
     <table id="DisplayTable1">
     </table>
+     </div>
+
     <br/>
     <h2 class="Hidden" id="itemsSoldTitle">Items Sold Today</h2>
-    <table id="DisplayTable2">
-    </table>
-</div>
+    <div id="table-scroll">
+        <table id="DisplayTable2"></table>
+        </div>
+    </div>
 
 
 @section css {
