--- a/Views/Reporting/FlexiPayReport.cshtml
+++ b/Views/Reporting/FlexiPayReport.cshtml
@@ -10,7 +10,7 @@
 <div class="Datediv_flexibuyreport">
         @Html.DropDownList("YearsAvailable")
         <select name="MonthsAvailable" id="MonthsAvailable" onchange="" size="1">
-            <option value="00">...</option>
+            <option value="00">...Select Month</option>
             <option value="01">January</option>
             <option value="02">February</option>
             <option value="03">March</option>
