--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -6,20 +6,20 @@
     }
 }
 <h1 class="centeredText">Sales Overview</h1>
-<div class="CenteredDiv">
+<h4 class="centeredText">Please select Day &amp; Currency</h4>
+<div style="clear: both;"></div>
+    <div class="day_currency_select">
+    <select id="DayAmmount">
+        <option value="1" selected="selected">1 Day</option>
+        <option value="7">7 Days</option>
+        <option value="14">14 Days</option>
+        <option value="30">30 Days</option>
+        <option value="60">60 Days</option>
+    </select>
 
-        <select id="DayAmmount">
-            <option value="1" selected="selected">1 Day</option>
-            <option value="7">7 Days</option>
-            <option value="14">14 Days</option>
-            <option value="30">30 Days</option>
-            <option value="60">60 Days</option>
-        </select>
-
-        @Html.DropDownList("CurrencyType")
-
-        <button class="generateButton" id="GenerateButton" onclick="GenerateSalesOverviewReport()">Generate Report</button>
-
+    @Html.DropDownList("CurrencyType")
+</div>
+     <div class="salesoverview_btn"><button class="generateButton_salesoverview" id="GenerateButton" onclick="GenerateSalesOverviewReport()">Generate Report</button></div>
         <a id="dlink" style="display:none;"></a>
 
         <div class="InvisibleDiv errorDiv" id="ErrorDiv">
@@ -28,7 +28,6 @@
         <div class="InvisibleDiv" id="LoadingDiv">
             <img src="~/Content/Images/ajax-loader.gif" />
         </div>
-    </div>
 
 <div id="TableArea">
     <div id="swipe_text_wrap">
