swipe text change

--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -31,7 +31,7 @@
 
 <div id="TableArea">
     <div id="swipe_text_wrap">
-        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe to view full table&nbsp;&#8594;</p>
+        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe the table to view all data&nbsp;&#8594;</p>
         <p class="swipe_text show-desktop">&#8592;&nbsp;click on the table and use keyboard arrow keys&nbsp;&#8594;</p>
     </div>
     <div id="table-scroll">
