swipe text changes

--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -31,8 +31,7 @@
 
 <div id="TableArea">
     <div id="swipe_text_wrap">
-        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe the table to view all data&nbsp;&#8594;</p>
-        <p class="swipe_text show-desktop">&#8592;&nbsp;click on the table and use keyboard arrow keys&nbsp;&#8594;</p>
+        <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe the table below<br /> to view all content&nbsp;&#8594;</p>
     </div>
     <div id="table-scroll">
     <table id="DisplayTable1">
