--- a/Views/Overview/Index.cshtml
+++ b/Views/Overview/Index.cshtml
@@ -7,48 +7,48 @@
 <div>
     <div class="ChartDiv">
         <h4>Web vs Phone (Today)</h4>
-        <canvas id="PieWebVsPhone" width="200" height="200"></canvas>
+        <canvas id="PieWebVsPhone" width="300" height="300"></canvas>
         <div id="PieWebVsPhoneLegend" class="chart-legend"></div>
     </div>
     <div class="ChartDiv">
         <h4>Web vs Phone (7 Days)</h4>
-        <canvas id="PieWebVsPhone7Days" width="200" height="200"></canvas>
+        <canvas id="PieWebVsPhone7Days" width="300" height="300"></canvas>
         <div id="PieWebVsPhone7DaysLegend" class="chart-legend"></div>
     </div>
 
     <div class="ChartDiv">
         <h4>Customer Types (Today) </h4>
-        <canvas id="PieCustomerNormalVsFreedom" width="200" height="200"></canvas>
+        <canvas id="PieCustomerNormalVsFreedom" width="300" height="300"></canvas>
         <div id="PieCustomerNormalVsFreedomLegend" class="chart-legend"></div>
     </div>
 
     <div class="ChartDiv">
         <h4>Repeat Customers (Today)</h4>
-        <canvas id="PieCustomersNewVsExisting" width="200" height="200"></canvas>
+        <canvas id="PieCustomersNewVsExisting" width="300" height="300"></canvas>
         <div id="PieCustomersNewVsExistingLegend" class="chart-legend"></div>
     </div>
     <div class="ChartDiv">
         <h4>ExVAT Turnover vs Margin (7 Days)</h4>
-        <canvas id="BarTurnoverVsMarginExVat7Days" width="400" height="270"></canvas>
+        <canvas id="BarTurnoverVsMarginExVat7Days" width="600" height="370"></canvas>
         <div id="TurnoverVsMarginExVat7DaysLegend" class="chart-legend"></div>
     </div>
 </div>
 <div>
     <div class="ChartDiv">
         <h4>ExVAT Turnover vs Margin (6 Months)</h4>
-        <canvas id="BarTurnoverVsMarginExVat6Months" width="400" height="270"></canvas>
+        <canvas id="BarTurnoverVsMarginExVat6Months" width="600" height="433"></canvas>
         <div id="=TurnoverVsMarginExVat6Monthslegend" class="chart-legend"></div>
     </div>
 
-    <div class="ChartDiv">
+    <div class="ChartDiv clearDiv">
         <h4>Delivery Services (Today)</h4>
-        <canvas id="PieNumberOfEachPostageType" width="200" height="200"></canvas>
+        <canvas id="PieNumberOfEachPostageType" width="300" height="300"></canvas>
         <div id="NumberOfEachPostageTypelegend" class="chart-legend"></div>
     </div>
 </div>
 <div class="ChartDiv">
     <h4>Delivery Services (7 Days)</h4>
-    <canvas id="PieNumberOfEachPostageType7Days" width="200" height="200"></canvas>
+    <canvas id="PieNumberOfEachPostageType7Days" width="300" height="300"></canvas>
     <div id="NumberOfEachPostageType7DaysLegend" class="chart-legend"></div>
 </div>
 
