--- a/Views/Tv/Index.cshtml
+++ b/Views/Tv/Index.cshtml
@@ -7,5 +7,6 @@
 
 
 
-@Html.ActionLink("Pol Sheets", "index", "polsheet", null, new { @class = "generateButton" }) <br/><br /><br /><br /><br /><br /><br /><br />
+@Html.ActionLink("Pol Sheets", "index", "polsheet", null, new { @class = "generateButton" })
 @Html.ActionLink("Show Minutes", "Minutes", "Tv", null, new { @class = "generateButton" })
+@Html.ActionLink("Random Order Generator", "RandomOrderGenerator", "Reporting", null, new { @class = "generateButton" })
