--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -40,9 +40,7 @@
 
     <br/>
     <h2 class="Hidden" id="itemsSoldTitle">Items Sold Today</h2>
-    <div id="table-scroll">
-        <table id="DisplayTable2"></table>
-        </div>
+        <table id="DisplayTable2" class="mw_zero"></table>
     </div>
 
 
