--- a/Views/Monitoring/index.cshtml
+++ b/Views/Monitoring/index.cshtml
@@ -22,7 +22,7 @@
         <div id="FraudDiv" class="BoxDiv"><span class="Bold">Orders Stuck in Fraud Check:</span><span id="NumberOfItemsSuckOnFraudCheck"></span></div>
         <div id="PickSheetDiv" class="BoxDiv"><span class="Bold">Items Awaiting Pick Sheet:</span><span id="NumberOfItemsAwaitingPickSheet"></span></div>
         <div id="OrdersDiv" class="BoxDiv"><span class="Bold">Oldest Unshipped Warehouse Item:</span><span id="OldestUnshipedWarehouseItems"></span> Days ago</div>
-        <div id="DuplicateOrdersDiv" class="BoxDiv"><span class="Bold">Potential Duplicate Orders:</span><span id="PotentialDuplicateOrders"></span> Today</div>
+        <div id="DuplicateOrdersDiv" class="BoxDiv HiddenDiv"><span class="Bold">Potential Duplicate Orders:</span><span id="PotentialDuplicateOrders"></span> Today</div>
     </div>
 </div>
 
