--- a/Views/Reporting/RandomOrderGenerator.cshtml
+++ b/Views/Reporting/RandomOrderGenerator.cshtml
@@ -6,7 +6,7 @@
 <br />
 <input type="radio" name="Condition" id="Condition1" value="1" checked> Any order between below dates<br>
 <input type="radio" name="Condition" id="Condition2" value="2"> Any order containing below SKU<br>
-<input type="radio" name="Condition" id="Condition3" value="3"> Any Order with item from specific show<br>
+<input type="radio" name="Condition" id="Condition3" value="3"> Any order with item from specific show<br>
 <br>
 
 
@@ -76,7 +76,8 @@
 
 <div id="SkuDiv" class="HiddenDiv">
     SKU:
-    <input type="number" name="skuInput" id="SkuInput" max="999999"><br>
+    <input type="number" name="skuInput" id="SkuInput" max="999999" MaxLength="6" pattern="[0-9]*"><br>
+    <div id="ErrorDiv" class="errorDiv HiddenDiv">That is not a valid SKU length.</div>
     <br>
 </div>
 <br>
