--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -40,7 +40,9 @@
 
     <br/>
     <h2 class="Hidden" id="itemsSoldTitle">Items Sold Today</h2>
+    <div class="table-no-scroll">
         <table id="DisplayTable2" class="mw_zero"></table>
+    </div>
     </div>
 
 
