--- a/Views/Reporting/ProductRulesReport.cshtml
+++ b/Views/Reporting/ProductRulesReport.cshtml
@@ -18,6 +18,7 @@ Day Range:
 <br />
 <br />
 <div id="TableArea"  class="HiddenDiv">
+    <div style="clear: both;"></div>
     <div id="swipe_text_wrap">
         <p class="swipe_text hide-desktop">&#8592;&nbsp;swipe the table below<br /> to view all content&nbsp;&#8594;</p>
     </div>
