--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1105,3 +1105,15 @@ div#SelectionDiv {
 .clearDiv {
     clear:both;
 }
+
+.red {
+    color:#f00
+}
+
+.green {
+    color:#007c0e
+}
+
+.skueditdescription{
+    width: 510px;
+}
