--- a/Views/Overview/Index.cshtml
+++ b/Views/Overview/Index.cshtml
@@ -41,13 +41,13 @@
     </div>
 
     <div class="ChartDiv clearDiv">
-        <h4>Delivery Services (Today)</h4>
+        <h4>Labels Generated (Today)</h4>
         <canvas id="PieNumberOfEachPostageType" width="300" height="300"></canvas>
         <div id="NumberOfEachPostageTypelegend" class="chart-legend"></div>
     </div>
 </div>
 <div class="ChartDiv">
-    <h4>Delivery Services (7 Days)</h4>
+    <h4>Labels Generated (7 Days)</h4>
     <canvas id="PieNumberOfEachPostageType7Days" width="300" height="300"></canvas>
     <div id="NumberOfEachPostageType7DaysLegend" class="chart-legend"></div>
 </div>
